2019-02-28  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

2019-02-14  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2019-02-11  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2019-02-08  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2019-02-04  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2019-02-01  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2019-01-29  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

2019-01-27  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2019-01-25  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

2019-01-15  Carl Hetherington  <cth@carlh.net>

	* Add --encrypt/-e option to dcpomatic_create.

2019-01-13  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated fr_FR translation from Thierry Journet.

2019-01-12  Carl Hetherington  <cth@carlh.net>

	* Check available disk space when adding jobs to the batch converter (#1249).

2019-01-10  Carl Hetherington  <cth@carlh.net>

	* Add File->Close to main DCP-o-matic (bound to Cmd-W on Mac) (#1180).

2019-01-09  Carl Hetherington  <cth@carlh.net>

	* Hopefully improve layout on high-resolution (>2K) displays (#1303).

2019-01-08  Carl Hetherington  <cth@carlh.net>

	* Re-analyse audio when DCP channel count changes (#1189).

	* Fix failure to re-analyse audio when the channel map changes (#1257).

2019-01-06  Carl Hetherington  <cth@carlh.net>

	* Disable subtitle view/font buttons with FFmpeg content (#1236).

	* Fix incorrectly-different IDs between MXF and XML in SMPTE subtitle files.

	* Improve behaviour of hints dialog with long projects (#1439).
